<resources>
    <string name="app_name">EduFin</string>
    <string name="enter_your_email_address">Введите ваш адрес электронной почты</string>
    <string name="enter_your_password">Введите свой пароль</string>
    <string name="confirm_your_password">Подтвердите ваш пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="email_not_entered_error">Пожалуйста, введите Ваш адрес электронной почты</string>
    <string name="enter_your_password_error">Пожалуйста, введите пароль</string>
    <string name="confirm_password_error">Ваш пароль и пароль подтверждения не совпадают</string>
    <string name="courses">Курсы</string>
    <string name="income">Операции</string>
    <string name="reports">Обзор</string>
    <string name="all">Все</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="username">Имя пользователя</string>
    <string name="group_name">Название группа(обязательно)</string>
    <string name="name">Имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="add_new_teacher">Добавить новый учитель(ница)</string>
    <string name="confirm_password">Подтвердить Пароль</string>
    <string name="empty_list">Пустой</string>
    <string name="with_google">С Google</string>
    <string name="fio">ФИО</string>
    <string name="add_teacher">Добавить учителя</string>
    <string name="employees">Учители</string>
    <string name="search">Кого искать?</string>
    <string name="course_name_ru">Названия курса</string>
    <string name="courseName">Название курса (обязательно)</string>
    <string name="create_group">Добавить группу</string>
    <string name="group_count">Группы: %1$s</string>
    <string name="participants_count">Студенты: %1$d</string>
    <string name="period">Период: %1$d</string>
    <string name="add">Добавить</string>
    <string name="s_expenses">Расходы</string>
    <string name="s_incomes">Доходы</string>
    <string name="account">Аккаунт</string>
    <string name="minus">-</string>
    <string name="swm">сум</string>
    <string name="plus">+</string>
    <string name="history">Мониторинг</string>
    <string name="coursePayment">Стоймост курса</string>
    <string name="coursePeriod">Период курса</string>
    <string name="_0">0 сум</string>
    <string name="salary">Зарплата</string>
    <string name="addTeacher">Добавить учителя</string>
    <string name="add_plus">+</string>
    <string name="fillField">"Заполните поле"</string>
    <string name="addCourse">Добавить курс</string>
    <string name="teachers">Сотрудники</string>
    <string name="confirmYourPass">Подтвердите пароль</string>
    <string name="doNotMatch">Пароль и подтверждение не совпадают</string>
    <string name="minLength">Пароль должен содержать не менее 6 символов</string>
    <string name="startDate">Дата начала(обязательно)</string>
    <string name="time">Время(обязательно):</string>
    <string name="mon">Пн</string>
    <string name="tue">Вт</string>
    <string name="wed">Ср</string>
    <string name="thu">Чт</string>
    <string name="fri">Пт</string>
    <string name="sat">Сб</string>
    <string name="sun">Вс</string>
    <string name="info">Данные</string>
    <string name="delete">Удалить</string>
    <string name="edit">Изменить</string>
    <string name="added_new_teacher">Добавлен новый учитель/учителница</string>
    <string name="done">Готово</string>
    <string name="everyDay">Ежедневно</string>
    <string name="added_successfully">Удачно добавлен</string>
    <string name="lessonStartsIn">Урок начинается в %1$s</string>
    <string name="selectTeacher">Выберите учителя</string>
    <string name="doNotSelected">Не выбрано</string>
    <string name="daysNotSelected">У вас еще нет выбранных дней</string>
    <string name="teachersNotSelected">У вас еще нет выбранных учитель/учителница</string>
    <string name="addStudent">Добавить студента</string>
    <string name="study">Об учёбе</string>
    <string name="groupCreated">Группа создана в %1$s</string>
    <string name="contractNum">Договор</string>
    <string name="addition">Ещё</string>
    <string name="students">Студенты</string>
    <string name="teacherInfo">Ментор: %1$s</string>
    <string name="daysInfo">Дни и время: %1$s</string>
    <string name="startInfo">Начала: %1$s</string>
    <string name="_290000">290000 сум</string>
    <string name="addPayment">Добавить платеж</string>
    <string name="dayPayment">Когда оплачено?</string>
    <string name="passport">Пасспорт</string>
    <string name="address">Адрес</string>
    <string name="birthDate">ДД.ММ.ГГГГ</string>
    <string name="addNewStudent">Добавить нового студента</string>
    <string name="selectStudents">Выбрать участников</string>
    <string name="select">Выбрать</string>
    <string name="about">Информация</string>
    <string name="settings">Настройка</string>
    <string name="sign_out">Выход</string>
    <string name="sign_out_text">Вы точно хотите выход?</string>
    <string name="yes">Да</string>
    <string name="todo">TODO</string>
    <string name="thisStudentWasPreviouslyAdded">Этот студент был добавлен ранее!</string>
    <string name="addedSuccessfullyIncome">Удачно добавлен новый доход</string>
    <string name="createStudentDialog">Вы можете добавить нового ученика или изменить других</string>
    <string name="sureToAddNewParticipant">Вы уверены, что добавите нового участника?</string>
    <string name="change">Изменить</string>
    <string name="contractExists">Номер такого контракта уже записан</string>
    <string name="callStudent">Звонок участнику</string>
    <string name="selectPhone">Вы должны выбрать номер телефона</string>
    <string name="phone1">номер телефона 1</string>
    <string name="phone2">номер телефона 2</string>
    <string name="organization">Исполнитель</string>
    <string name="bank">Банк</string>
    <string name="inn">ИНН</string>
    <string name="mfo">МФО</string>
    <string name="score">р/счет</string>
    <string name="phone_">Телефон</string>
    <string name="director">Директор</string>
    <string name="email">Почта</string>
    <string name="attention">Внимание</string>
    <string name="connectInternet">Включите в Интернете</string>
    <string name="doItAnyway">Все равно довабить</string>
    <string name="category">Категории</string>
    <string name="add_category">Добавить категории</string>
    <string name="categoryName">Названия категория</string>
    <string name="incomeCategoryName">Название категории дохода</string>
    <string name="expenseCategoryName">Название категории расходов</string>
    <string name="rent">Аренда</string>
    <string name="salary_x">Зарплата</string>
    <string name="course_pay">Взнос</string>
    <string name="course_pay_min">взнос</string>
    <string name="categories_added">Категории успешно добавлены</string>
    <string name="open_app">Приложение успешно открылось</string>
    <string name="enterMoney">Введите сумму</string>
    <string name="selectCategory">Выберите категорию</string>
    <string name="note">Заметка</string>
    <string name="date_time">Дата и время операции</string>
    <string name="addExpense">Добавить расход</string>
    <string name="doNotSelectedTime">Вы не выбрали дату</string>
    <string name="doNotSelectedCategory">Вы не выбрали категорию</string>
    <string name="selectCourse">Выбрать курс</string>
    <string name="selectGroup">Выбрать группу</string>
    <string name="selectParticipant">Выбрать участника</string>
    <string name="addIncome">Добавить доход</string>
    <string name="fromText">С %1$s</string>
    <string name="toText">По %1$s</string>
    <string name="sort">Фильтр</string>
    <string name="selectOtherDate">Вы должны выбрать другую дату!</string>
    <string name="add_salary">Добавить зарплату</string>
    <string name="reportCategory">%1$s</string>
    <string name="trans">%1$d Транзакций</string>
    <string name="amount">%1$d Сум</string>
    <string name="amountIncomes">+ %1$d Сум</string>
    <string name="amountExpenses">- %1$d Сум</string>
    <string name="daySalary">Когда дано?</string>
    <string name="our_address">Наш аддресс</string>
    <string name="studentName">ФИО: %1$s</string>
    <string name="studentAddress">Адрес: %1$s</string>
    <string name="studentPassport">Пасспорт: %1$s</string>
    <string name="studentRemainder">Остаток: %1$d</string>
    <string name="studentContract">Договор: %1$d</string>
</resources>
