<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tvPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:gravity="center"
        android:padding="@dimen/margin_standard"
        android:text="@string/addPayment"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:layout_marginHorizontal="@dimen/margin_middle"
        android:hint="@string/_290000"
        android:inputType="number"
        android:padding="@dimen/margin_standard"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPayment"
        tools:ignore="SpUsage" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:layout_marginHorizontal="@dimen/margin_middle"
        android:hint="@string/note"
        android:inputType="text"
        android:padding="@dimen/margin_standard"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPayment"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_middle"
        android:padding="@dimen/margin_middle"
        android:text="@string/dayPayment"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNote"
        tools:ignore="SpUsage" />

    <DatePicker
        android:id="@+id/dpDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate" />

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_middle"
        android:padding="@dimen/margin_middle"
        android:text="@string/cancel"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnYes"
        app:layout_constraintTop_toBottomOf="@id/dpDate"
        tools:ignore="SpUsage"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/btnYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_middle"
        android:layout_marginBottom="@dimen/margin_standard"
        android:padding="@dimen/margin_middle"
        android:text="@string/done"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dpDate"
        tools:ignore="SpUsage"
        android:textStyle="bold"/>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>