<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:weightSum="7"
    android:layout_marginVertical="@dimen/margin_standard">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/margin_standard">

        <TextView
            android:id="@+id/mon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/mon" />

        <ImageView
            android:id="@+id/mon_selected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/selected"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/margin_standard">

        <TextView
            android:id="@+id/tue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/tue" />

        <ImageView
            android:id="@+id/tue_selected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/selected"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/margin_standard">

        <TextView
            android:id="@+id/wed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/wed"/>

        <ImageView
            android:id="@+id/wed_selected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/selected"
            android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_standard">

            <TextView
                android:id="@+id/thu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/thu"/>

            <ImageView
                android:id="@+id/thu_selected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/selected"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/margin_standard">

        <TextView
            android:id="@+id/fri"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/fri"/>

        <ImageView
            android:id="@+id/fri_selected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/selected"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/margin_standard">

        <TextView
            android:id="@+id/sat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/sat"/>

        <ImageView
            android:id="@+id/sat_selected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/selected"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginHorizontal="@dimen/margin_standard">

        <TextView
            android:id="@+id/sun"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/sun"/>

        <ImageView
            android:id="@+id/sun_selected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/selected"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>